--- a/.github/workflows/Deploy_Digital_Ocean.yml
+++ b/.github/workflows/Deploy_Digital_Ocean.yml
@@ -27,7 +27,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Maven Package
-        run: ./mvnw clean package
+        run: chmod +x mvnw && ./mvnw clean package -DskipTests
       - name: Publish to Docker Hub
         uses: docker/build-push-action@v2
         with:
