--- a/.github/workflows/Deploy_Digital_Ocean.yml
+++ b/.github/workflows/Deploy_Digital_Ocean.yml
@@ -28,13 +28,19 @@ jobs:
             ${{ runner.os }}-maven-
       - name: Maven Package
         run: chmod +x mvnw && ./mvnw clean package -DskipTests
-      - name: Publish to Docker Hub
-        uses: docker/build-push-action@v1
+      - name: Login to DockerHub
+        if: GitHub.event_name != 'pull_request'
+        uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-          repository: amtamusic/Sorting-Algorithm-API-Visualizer
-          tags: latest
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: ${{ GitHub.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
       - name: Connect
         uses: appleboy/ssh-action@master
         with:
