--- a/.github/workflows/Deploy_Digital_Ocean.yml
+++ b/.github/workflows/Deploy_Digital_Ocean.yml
@@ -39,8 +39,7 @@ jobs:
         with:
           context: .
           push: ${{ GitHub.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: latest
       - name: Connect
         uses: appleboy/ssh-action@master
         with:
