--- a/.github/workflows/Deploy_Digital_Ocean.yml
+++ b/.github/workflows/Deploy_Digital_Ocean.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           context: .
           push: ${{ GitHub.event_name != 'pull_request' }}
-          tags: latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/latest
       - name: Connect
         uses: appleboy/ssh-action@master
         with:
