--- a/.github/workflows/Deploy_Digital_Ocean.yml
+++ b/.github/workflows/Deploy_Digital_Ocean.yml
@@ -11,6 +11,7 @@ env:
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
+    environment: Prod
     steps:
       - name: Code Checkout
         uses: actions/checkout@v2
