--- a/.github/workflows/Deploy_Digital_Ocean.yml
+++ b/.github/workflows/Deploy_Digital_Ocean.yml
@@ -58,4 +58,4 @@ jobs:
             docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD
             docker pull doomslayer92/latest:latest
             docker rm -f terminal-commands
-            docker run -d --name terminal-commands -p 8080:8080 doomslayer92/latest:latest
+            docker run -d --restart always --name terminal-commands -p 8080:8080 doomslayer92/latest:latest
