--- a/.github/workflows/Deploy_Digital_Ocean.yml
+++ b/.github/workflows/Deploy_Digital_Ocean.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           context: .
           push: ${{ GitHub.event_name != 'pull_request' }}
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/sorting-algorithms:latest
       - name: Connect
         uses: appleboy/ssh-action@master
         env:
@@ -56,6 +56,6 @@ jobs:
           debug: true
           script: |
             docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD
-            docker pull doomslayer92/latest:latest
-            docker rm -f terminal-commands
-            docker run -d --restart always --name terminal-commands -p 8080:8080 doomslayer92/latest:latest
+            docker pull doomslayer92/sorting-algorithms:latest
+            docker rm -f sorting-algorithms
+            docker run -d --restart always --name sorting-algorithms -p 8080:8080 doomslayer92/sorting-algorithms:latest
