--- a/.github/workflows/Deploy_Digital_Ocean.yml
+++ b/.github/workflows/Deploy_Digital_Ocean.yml
@@ -59,3 +59,11 @@ jobs:
             docker pull doomslayer92/sorting-algorithms:latest
             docker rm -f sorting-algorithms
             docker run -d --restart always --name sorting-algorithms -p 8080:8080 doomslayer92/sorting-algorithms:latest
+      - name: URL Health Check
+        uses: Jtalk/url-health-check-action@v2.2
+        with:
+          url: http://${{ secrets.HOST }}:8080/test
+          follow-redirect: false
+          max-attempts: 10
+          retry-delay: 5s
+          retry-all: false
